feat: enhance licensing and integrations features
- Updated demoData to include additional license fields: product, subproduct, license_name, and type.
- Added a new integrations page with cards for each integration, displaying licensing requirements and details.
- Implemented VIP features page, showcasing premium support benefits.
- Enhanced Sidebar to conditionally display VIP link based on license status.
- Updated LicenseTab to manage license activation, deactivation, and reactivation with improved UI.
- Added internationalization support for new strings in both English and German.
- Introduced event listeners for license changes to dynamically update UI components.

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -8,7 +8,9 @@
     "profile": "Profil",
     "monitoring": "Monitoring",
     "license_billing": "Lizenz / Abrechnung",
-    "billing": "Abrechnung"
+    "billing": "Abrechnung",
+    "integrations": "Integrationen",
+    "vip": "VIP"
   },
   "auth": {
     "login": "Anmelden", "logout": "Abmelden", "username": "Benutzername", "password": "Passwort", "host": "Server-Adresse",
@@ -142,7 +144,21 @@
     "copy_key": "Schl\u00fcssel kopieren",
     "key_copied": "Schl\u00fcssel in Zwischenablage kopiert",
     "error_duplicate": "Dieser Lizenzschl\u00fcssel ist bereits aktiviert",
-    "error_invalid": "Ung\u00fcltiger Lizenzschl\u00fcssel"
+    "error_invalid": "Ung\u00fcltiger Lizenzschl\u00fcssel",
+    "product": "Produkt",
+    "subproduct": "Unterprodukt",
+    "license_name": "Lizenz",
+    "client_type": "Typ",
+    "valid_until": "G\u00fcltig bis",
+    "type_partner": "Partner",
+    "type_client": "Kunde",
+    "type_internal": "Intern",
+    "deactivated": "Deaktiviert",
+    "deactivate": "Deaktivieren",
+    "deactivate_title": "Lizenz deaktivieren?",
+    "deactivate_message": "Möchten Sie die Lizenz \"{{name}}\" wirklich deaktivieren? Die Lizenz wird von diesem Server abgemeldet und kann später wieder aktiviert werden.",
+    "deactivate_success": "Lizenz erfolgreich deaktiviert",
+    "error_already_deactivated": "Diese Lizenz ist bereits deaktiviert"
   },
   "language": { "language": "Sprache", "german": "Deutsch", "english": "Englisch" },
   "logs": {
@@ -354,6 +370,51 @@
     "cat_config": "Konfiguration",
     "cat_license": "Lizenz",
     "cat_system": "System"
+  },
+  "integrations": {
+    "title": "Integrationen",
+    "subtitle": "Verbinden Sie Ihren SIP Wrapper mit Drittanbieter-Diensten und Plattformen.",
+    "license_hint": "Integrationen erfordern eine separate Lizenz für jeden Dienst. Kontaktieren Sie den Vertrieb zur Aktivierung.",
+    "active": "Aktiv",
+    "no_license": "Keine Lizenz",
+    "configure": "Konfigurieren",
+    "requires_license": "Lizenz erforderlich",
+    "details": "Details",
+    "features": "Funktionen",
+    "vapi_desc": "KI-Sprachagenten-Plattform für konversationelle KI-Telefonerlebnisse.",
+    "vapi_detail": "VAPI ermöglicht die Erstellung intelligenter Sprachagenten, die Telefonanrufe autonom bearbeiten. Integrieren Sie Ihren SIP Wrapper mit VAPI, um eingehende Anrufe an KI-Agenten weiterzuleiten oder ausgehende KI-gesteuerte Kampagnen zu starten.",
+    "vapi_features": "Eingehende Anrufweiterleitung an KI-Agenten|Ausgehende KI-Anrufkampagnen|Echtzeit-Anruftranskription|Individuelle Sprach- & Sprachmodelle|Webhook-basierte Anrufereignisse",
+    "odoo_desc": "All-in-One Business-Management-Suite — CRM, ERP, Buchhaltung und mehr.",
+    "odoo_detail": "Verbinden Sie Ihr Telefonsystem mit Odoo, um Click-to-Call aus CRM-Kontakten, automatische Anrufprotokollierung und Echtzeit-Anruf-Popups mit Kundeninformationen zu ermöglichen.",
+    "odoo_features": "Click-to-Call aus CRM-Kontakten|Automatische Anrufprotokollierung in Odoo|Eingehender Anruf-Popup mit Kundeninfo|Anrufverlauf pro Kontakt|VoIP-Integration mit Odoo-Apps",
+    "zoho_desc": "Cloud-basierte Business-Tools — CRM, Helpdesk, Analysen und Telefonie-Integration.",
+    "zoho_detail": "Integrieren Sie Zoho CRM und Zoho Desk mit Ihrem SIP Wrapper für nahtlose Telefonie-Workflows, automatische Ticket-Erstellung und Anrufanalysen direkt in Ihrem Zoho-Dashboard.",
+    "zoho_features": "Click-to-Call aus Zoho CRM|Auto-Ticket-Erstellung bei verpassten Anrufen|Anrufaufzeichnung mit Kontakten verknüpft|Analytics-Dashboard-Integration|Zoho PhoneBridge kompatibel",
+    "retell_desc": "Erstellen und bereitstellen von KI-Sprachagenten mit natürlich klingenden Gesprächen.",
+    "retell_detail": "Retell AI bietet ultra-realistische Sprachagenten. Verbinden Sie Ihre SIP-Infrastruktur, um KI-Agenten bereitzustellen, die Kundenanfragen, Terminplanung und mehr mit menschenähnlicher Sprachqualität bearbeiten.",
+    "retell_features": "Ultra-realistische KI-Sprachagenten|Mehrsprachige Unterstützung|Individuelle Gesprächsabläufe|Echtzeit-Stimmungsanalyse|Nahtlose SIP-Trunk-Integration",
+    "bland_desc": "KI-Telefonie-Plattform für automatisierte ausgehende und eingehende Anrufe.",
+    "bland_detail": "Bland AI ist spezialisiert auf automatisierte Telefonanrufe in großem Umfang. Integrieren Sie mit Ihrem SIP Wrapper, um groß angelegte ausgehende Kampagnen zu starten oder eingehende Anrufe mit KI-gesteuerten Agenten zu bearbeiten.",
+    "bland_features": "Ausgehende Kampagnen in großem Umfang|KI-gesteuerte eingehende Bearbeitung|Individuelle Anrufskripte|Anrufübergabe an Live-Agenten|Detaillierte Anrufanalysen & Berichte",
+    "hubspot_desc": "CRM-Plattform mit Marketing-, Vertriebs- und Kundenservice-Integration.",
+    "hubspot_detail": "Verbinden Sie HubSpot CRM mit Ihrem Telefonsystem für Click-to-Call, automatische Anrufprotokollierung, Deal-Pipeline-Trigger und Kommunikationsverfolgung über alle Kanäle.",
+    "hubspot_features": "Click-to-Call aus HubSpot-Kontakten|Automatische Anrufaktivitätsprotokollierung|Deal-Pipeline-Anruftrigger|Kontakt-Timeline-Integration|Anrufaufzeichnung & Wiedergabe",
+    "premium_desc": "Prioritäts-Support mit persönlichem Account-Manager und garantierten SLAs.",
+    "premium_detail": "Premium Support gibt Ihnen direkten Zugang zu unserem Engineering-Team mit garantierten Antwortzeiten, einem persönlichen Account-Manager und proaktiver Systemüberwachung für maximale Verfügbarkeit.",
+    "premium_features": "Garantierte Antwortzeit-SLA|Persönlicher Account-Manager|Proaktive Systemüberwachung|Prioritäts-Bugfixes & Patches|Direkter Zugang zum Engineering-Team|Vierteljährliche Business-Reviews"
+  },
+  "vip": {
+    "title": "VIP-Funktionen",
+    "premium": "Premium",
+    "subtitle": "Exklusive Premium-Funktionen, freigeschaltet mit Ihrer Premium Support-Lizenz.",
+    "feature_priority": "Prioritäts-Support",
+    "feature_priority_desc": "Erhalten Sie bevorzugten Zugang zu unserem Support-Team mit garantierten Antwortzeiten.",
+    "feature_analytics": "Erweiterte Analysen",
+    "feature_analytics_desc": "Detaillierte Anrufanalysen, Qualitätsmetriken und benutzerdefinierte Berichts-Dashboards.",
+    "feature_support": "Persönlicher Account-Manager",
+    "feature_support_desc": "Ein persönlicher Account-Manager für Onboarding und Optimierung.",
+    "feature_api": "Erweiterter API-Zugang",
+    "feature_api_desc": "Zugang zu erweiterten API-Endpunkten für individuelle Integrationen und Automatisierung."
   },
   "demo": {
     "title": "Demo-Modus",
