--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,7 +8,9 @@
     "profile": "Profile",
     "monitoring": "Monitoring",
     "license_billing": "License / Billing",
-    "billing": "Billing"
+    "billing": "Billing",
+    "integrations": "Integrations",
+    "vip": "VIP"
   },
   "auth": {
     "login": "Login", "logout": "Logout", "username": "Username", "password": "Password", "host": "Server Host",
@@ -142,7 +144,21 @@
     "copy_key": "Copy Key",
     "key_copied": "Key copied to clipboard",
     "error_duplicate": "This license key is already activated",
-    "error_invalid": "Invalid license key"
+    "error_invalid": "Invalid license key",
+    "product": "Product",
+    "subproduct": "Subproduct",
+    "license_name": "License",
+    "client_type": "Type",
+    "valid_until": "Valid Until",
+    "type_partner": "Partner",
+    "type_client": "Client",
+    "type_internal": "Internal",
+    "deactivated": "Deactivated",
+    "deactivate": "Deactivate",
+    "deactivate_title": "Deactivate License?",
+    "deactivate_message": "Are you sure you want to deactivate license \"{{name}}\"? The license will be unbound from this server and can be reactivated later.",
+    "deactivate_success": "License deactivated successfully",
+    "error_already_deactivated": "This license is already deactivated"
   },
   "language": { "language": "Language", "german": "German", "english": "English" },
   "logs": {
@@ -354,6 +370,51 @@
     "cat_config": "Config",
     "cat_license": "License",
     "cat_system": "System"
+  },
+  "integrations": {
+    "title": "Integrations",
+    "subtitle": "Connect your SIP Wrapper with third-party services and platforms.",
+    "license_hint": "Integrations require a separate license for each service. Contact sales to activate.",
+    "active": "Active",
+    "no_license": "No License",
+    "configure": "Configure",
+    "requires_license": "License Required",
+    "details": "Details",
+    "features": "Features",
+    "vapi_desc": "AI voice agent platform for building conversational AI phone experiences.",
+    "vapi_detail": "VAPI enables you to create intelligent voice agents that handle phone calls autonomously. Integrate your SIP Wrapper with VAPI to route inbound calls to AI agents or launch outbound AI-driven campaigns.",
+    "vapi_features": "Inbound call routing to AI agents|Outbound AI call campaigns|Real-time call transcription|Custom voice & language models|Webhook-based call events",
+    "odoo_desc": "All-in-one business management suite — CRM, ERP, accounting, and more.",
+    "odoo_detail": "Connect your telephony system with Odoo to enable click-to-call from CRM contacts, automatic call logging, and real-time call popups with customer information.",
+    "odoo_features": "Click-to-call from CRM contacts|Automatic call logging in Odoo|Incoming call popup with customer info|Call history per contact|VoIP integration with Odoo apps",
+    "zoho_desc": "Cloud-based business tools — CRM, helpdesk, analytics, and telephony integration.",
+    "zoho_detail": "Integrate Zoho CRM and Zoho Desk with your SIP Wrapper to enable seamless telephony workflows, automatic ticket creation, and call analytics directly in your Zoho dashboard.",
+    "zoho_features": "Click-to-call from Zoho CRM|Auto-create support tickets on missed calls|Call recording linked to contacts|Analytics dashboard integration|Zoho PhoneBridge compatible",
+    "retell_desc": "Build and deploy AI voice agents with natural-sounding conversations.",
+    "retell_detail": "Retell AI provides ultra-realistic voice agents. Connect your SIP infrastructure to deploy AI agents that handle customer inquiries, appointment scheduling, and more with human-like voice quality.",
+    "retell_features": "Ultra-realistic AI voice agents|Multi-language support|Custom conversation flows|Real-time sentiment analysis|Seamless SIP trunk integration",
+    "bland_desc": "AI phone calling platform for automated outbound and inbound calls.",
+    "bland_detail": "Bland AI specializes in high-volume automated phone calls. Integrate with your SIP Wrapper to launch large-scale outbound campaigns or handle inbound call routing with AI-powered agents.",
+    "bland_features": "High-volume outbound campaigns|AI-powered inbound handling|Custom call scripts|Call transfer to live agents|Detailed call analytics & reporting",
+    "hubspot_desc": "CRM platform with marketing, sales, and customer service integration.",
+    "hubspot_detail": "Connect HubSpot CRM with your telephony system to enable click-to-call, automatic call logging, deal-stage triggers, and customer communication tracking across all channels.",
+    "hubspot_features": "Click-to-call from HubSpot contacts|Automatic call activity logging|Deal pipeline call triggers|Contact timeline integration|Call recording & playback",
+    "premium_desc": "Priority support with dedicated account manager and guaranteed SLAs.",
+    "premium_detail": "Premium Support gives you direct access to our engineering team with guaranteed response times, a dedicated account manager, and proactive system monitoring to ensure maximum uptime.",
+    "premium_features": "Guaranteed response time SLA|Dedicated account manager|Proactive system monitoring|Priority bug fixes & patches|Direct engineering team access|Quarterly business reviews"
+  },
+  "vip": {
+    "title": "VIP Features",
+    "premium": "Premium",
+    "subtitle": "Exclusive premium features unlocked with your Premium Support license.",
+    "feature_priority": "Priority Support",
+    "feature_priority_desc": "Get priority access to our support team with guaranteed response times.",
+    "feature_analytics": "Advanced Analytics",
+    "feature_analytics_desc": "Deep call analytics, quality metrics, and custom reporting dashboards.",
+    "feature_support": "Dedicated Account Manager",
+    "feature_support_desc": "A dedicated account manager to help with onboarding and optimization.",
+    "feature_api": "Extended API Access",
+    "feature_api_desc": "Access to advanced API endpoints for custom integrations and automation."
   },
   "demo": {
     "title": "Demo Mode",
