feat: update branding references from SIP Wrapper to Linkify TalkHub across multiple files

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -395,7 +395,7 @@
   },
   "integrations": {
     "title": "Integrationen",
-    "subtitle": "Verbinden Sie Ihren SIP Wrapper mit Drittanbieter-Diensten und Plattformen.",
+    "subtitle": "Verbinden Sie Ihren Linkify TalkHub mit Drittanbieter-Diensten und Plattformen.",
     "license_hint": "Integrationen erfordern eine separate Lizenz für jeden Dienst. Kontaktieren Sie den Vertrieb zur Aktivierung.",
     "active": "Aktiv",
     "no_license": "Keine Lizenz",
@@ -404,19 +404,19 @@
     "details": "Details",
     "features": "Funktionen",
     "vapi_desc": "KI-Sprachagenten-Plattform für konversationelle KI-Telefonerlebnisse.",
-    "vapi_detail": "VAPI ermöglicht die Erstellung intelligenter Sprachagenten, die Telefonanrufe autonom bearbeiten. Integrieren Sie Ihren SIP Wrapper mit VAPI, um eingehende Anrufe an KI-Agenten weiterzuleiten oder ausgehende KI-gesteuerte Kampagnen zu starten.",
+    "vapi_detail": "VAPI ermöglicht die Erstellung intelligenter Sprachagenten, die Telefonanrufe autonom bearbeiten. Integrieren Sie Ihren Linkify TalkHub mit VAPI, um eingehende Anrufe an KI-Agenten weiterzuleiten oder ausgehende KI-gesteuerte Kampagnen zu starten.",
     "vapi_features": "Eingehende Anrufweiterleitung an KI-Agenten|Ausgehende KI-Anrufkampagnen|Echtzeit-Anruftranskription|Individuelle Sprach- & Sprachmodelle|Webhook-basierte Anrufereignisse",
     "odoo_desc": "All-in-One Business-Management-Suite — CRM, ERP, Buchhaltung und mehr.",
     "odoo_detail": "Verbinden Sie Ihr Telefonsystem mit Odoo, um Click-to-Call aus CRM-Kontakten, automatische Anrufprotokollierung und Echtzeit-Anruf-Popups mit Kundeninformationen zu ermöglichen.",
     "odoo_features": "Click-to-Call aus CRM-Kontakten|Automatische Anrufprotokollierung in Odoo|Eingehender Anruf-Popup mit Kundeninfo|Anrufverlauf pro Kontakt|VoIP-Integration mit Odoo-Apps",
     "zoho_desc": "Cloud-basierte Business-Tools — CRM, Helpdesk, Analysen und Telefonie-Integration.",
-    "zoho_detail": "Integrieren Sie Zoho CRM und Zoho Desk mit Ihrem SIP Wrapper für nahtlose Telefonie-Workflows, automatische Ticket-Erstellung und Anrufanalysen direkt in Ihrem Zoho-Dashboard.",
+    "zoho_detail": "Integrieren Sie Zoho CRM und Zoho Desk mit Ihrem Linkify TalkHub für nahtlose Telefonie-Workflows, automatische Ticket-Erstellung und Anrufanalysen direkt in Ihrem Zoho-Dashboard.",
     "zoho_features": "Click-to-Call aus Zoho CRM|Auto-Ticket-Erstellung bei verpassten Anrufen|Anrufaufzeichnung mit Kontakten verknüpft|Analytics-Dashboard-Integration|Zoho PhoneBridge kompatibel",
     "retell_desc": "Erstellen und bereitstellen von KI-Sprachagenten mit natürlich klingenden Gesprächen.",
     "retell_detail": "Retell AI bietet ultra-realistische Sprachagenten. Verbinden Sie Ihre SIP-Infrastruktur, um KI-Agenten bereitzustellen, die Kundenanfragen, Terminplanung und mehr mit menschenähnlicher Sprachqualität bearbeiten.",
     "retell_features": "Ultra-realistische KI-Sprachagenten|Mehrsprachige Unterstützung|Individuelle Gesprächsabläufe|Echtzeit-Stimmungsanalyse|Nahtlose SIP-Trunk-Integration",
     "bland_desc": "KI-Telefonie-Plattform für automatisierte ausgehende und eingehende Anrufe.",
-    "bland_detail": "Bland AI ist spezialisiert auf automatisierte Telefonanrufe in großem Umfang. Integrieren Sie mit Ihrem SIP Wrapper, um groß angelegte ausgehende Kampagnen zu starten oder eingehende Anrufe mit KI-gesteuerten Agenten zu bearbeiten.",
+    "bland_detail": "Bland AI ist spezialisiert auf automatisierte Telefonanrufe in großem Umfang. Integrieren Sie mit Ihrem Linkify TalkHub, um groß angelegte ausgehende Kampagnen zu starten oder eingehende Anrufe mit KI-gesteuerten Agenten zu bearbeiten.",
     "bland_features": "Ausgehende Kampagnen in großem Umfang|KI-gesteuerte eingehende Bearbeitung|Individuelle Anrufskripte|Anrufübergabe an Live-Agenten|Detaillierte Anrufanalysen & Berichte",
     "hubspot_desc": "CRM-Plattform mit Marketing-, Vertriebs- und Kundenservice-Integration.",
     "hubspot_detail": "Verbinden Sie HubSpot CRM mit Ihrem Telefonsystem für Click-to-Call, automatische Anrufprotokollierung, Deal-Pipeline-Trigger und Kommunikationsverfolgung über alle Kanäle.",
