--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -395,7 +395,7 @@
   },
   "integrations": {
     "title": "Integrations",
-    "subtitle": "Connect your SIP Wrapper with third-party services and platforms.",
+    "subtitle": "Connect your Linkify TalkHub with third-party services and platforms.",
     "license_hint": "Integrations require a separate license for each service. Contact sales to activate.",
     "active": "Active",
     "no_license": "No License",
@@ -404,19 +404,19 @@
     "details": "Details",
     "features": "Features",
     "vapi_desc": "AI voice agent platform for building conversational AI phone experiences.",
-    "vapi_detail": "VAPI enables you to create intelligent voice agents that handle phone calls autonomously. Integrate your SIP Wrapper with VAPI to route inbound calls to AI agents or launch outbound AI-driven campaigns.",
+    "vapi_detail": "VAPI enables you to create intelligent voice agents that handle phone calls autonomously. Integrate your Linkify TalkHub with VAPI to route inbound calls to AI agents or launch outbound AI-driven campaigns.",
     "vapi_features": "Inbound call routing to AI agents|Outbound AI call campaigns|Real-time call transcription|Custom voice & language models|Webhook-based call events",
     "odoo_desc": "All-in-one business management suite — CRM, ERP, accounting, and more.",
     "odoo_detail": "Connect your telephony system with Odoo to enable click-to-call from CRM contacts, automatic call logging, and real-time call popups with customer information.",
     "odoo_features": "Click-to-call from CRM contacts|Automatic call logging in Odoo|Incoming call popup with customer info|Call history per contact|VoIP integration with Odoo apps",
     "zoho_desc": "Cloud-based business tools — CRM, helpdesk, analytics, and telephony integration.",
-    "zoho_detail": "Integrate Zoho CRM and Zoho Desk with your SIP Wrapper to enable seamless telephony workflows, automatic ticket creation, and call analytics directly in your Zoho dashboard.",
+    "zoho_detail": "Integrate Zoho CRM and Zoho Desk with your Linkify TalkHub to enable seamless telephony workflows, automatic ticket creation, and call analytics directly in your Zoho dashboard.",
     "zoho_features": "Click-to-call from Zoho CRM|Auto-create support tickets on missed calls|Call recording linked to contacts|Analytics dashboard integration|Zoho PhoneBridge compatible",
     "retell_desc": "Build and deploy AI voice agents with natural-sounding conversations.",
     "retell_detail": "Retell AI provides ultra-realistic voice agents. Connect your SIP infrastructure to deploy AI agents that handle customer inquiries, appointment scheduling, and more with human-like voice quality.",
     "retell_features": "Ultra-realistic AI voice agents|Multi-language support|Custom conversation flows|Real-time sentiment analysis|Seamless SIP trunk integration",
     "bland_desc": "AI phone calling platform for automated outbound and inbound calls.",
-    "bland_detail": "Bland AI specializes in high-volume automated phone calls. Integrate with your SIP Wrapper to launch large-scale outbound campaigns or handle inbound call routing with AI-powered agents.",
+    "bland_detail": "Bland AI specializes in high-volume automated phone calls. Integrate with your Linkify TalkHub to launch large-scale outbound campaigns or handle inbound call routing with AI-powered agents.",
     "bland_features": "High-volume outbound campaigns|AI-powered inbound handling|Custom call scripts|Call transfer to live agents|Detailed call analytics & reporting",
     "hubspot_desc": "CRM platform with marketing, sales, and customer service integration.",
     "hubspot_detail": "Connect HubSpot CRM with your telephony system to enable click-to-call, automatic call logging, deal-stage triggers, and customer communication tracking across all channels.",
