feat: update routing and navigation components to reflect new structure and license handling

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -2,7 +2,7 @@
   "app": { "title": "InsideDynamic Wrapper - Admin" },
   "nav": {
     "dashboard": "Dashboard",
-    "config": "Konfiguration",
+    "config": "Hub Konfiguration",
     "security": "Sicherheit",
     "logs": "Logs",
     "profile": "Profil",
